RESOLVED FIXED11255
Links with nested continuations fail to paint their outlines
https://bugs.webkit.org/show_bug.cgi?id=11255
Summary Links with nested continuations fail to paint their outlines
Beth Dakin
Reported 2006-10-11 11:23:19 PDT
This should draw an outline but doesn't: <a href="http://www.apple.com" style="outline:10px auto purple"><h3>Hello</h3></a>
Attachments
Test case (82 bytes, text/html)
2006-10-11 11:24 PDT, Beth Dakin
no flags
Improve continuation outline painting a lot. (4.35 KB, patch)
2007-05-10 03:20 PDT, Dave Hyatt
mitz: review+
Beth Dakin
Comment 1 2006-10-11 11:24:13 PDT
Created attachment 11034 [details] Test case Here is the above html attached as a test case.
Beth Dakin
Comment 2 2006-10-11 11:33:20 PDT
Dave Hyatt
Comment 3 2006-10-11 14:26:27 PDT
The reason the outline doesn't paint is that there is no line box for the <a>. I think there may also be an issue with outline painting when the dirty rect while painting doesn't intersect the first <a>. (This could come up more often with printing when the continuation splits across page breaks).
Dave Hyatt
Comment 4 2007-05-10 03:20:46 PDT
Created attachment 14456 [details] Improve continuation outline painting a lot.
mitz
Comment 5 2007-05-10 03:32:57 PDT
Comment on attachment 14456 [details] Improve continuation outline painting a lot. r=me!
Dave Hyatt
Comment 6 2007-05-10 03:36:12 PDT
Fixed in r21363.
Note You need to log in before you can comment on or make changes to this bug.