        Fix for:

<rdar://problem/4778099> Links with nested continuations fail to
        paint their outlines (11255)

        http://bugs.webkit.org/show_bug.cgi?id=11255

        Fix multiple bugs with outline painting of continuations to ensure that
        all combos work (empty/full inline - block with/without margins -
        empty/full inline).

        Reviewed by mitz

        fast/inline/continuation-outlines.html

        * rendering/RenderBlock.cpp:
        (WebCore::RenderBlock::paintObject):
        * rendering/RenderFlow.cpp:
        (WebCore::RenderFlow::addFocusRingRects):



Canonical link: https://commits.webkit.org/17823@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@21363 268f45cc-cd09-0410-ab3c-d52691b4dbfc